fix:Correcciones pequeñas